[package]
name = "skill"
version = "0.0.58"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "GPL-3.0-only"

# ── Feature flags ─────────────────────────────────────────────────────────────
#
#  tts-kitten  — enable KittenTTS (ONNX, English, ~30 MB, espeak-ng required)
#  tts-neutts  — enable NeuTTS   (GGUF backbone + NeuCodec, voice-cloning,
#                                  multi-language, espeak-ng + cmake required)
#
#  All three are on by default.  To build without LLM support:
#    cargo build --no-default-features --features tts-kitten,tts-neutts
#
#  llm         — OpenAI-compatible local LLM inference server embedded in the
#                same HTTP port as the WebSocket API.  Uses llama-cpp-4 (Rust
#                bindings for llama.cpp).  On by default.
#                GPU offloading is automatic by platform:
#                  macOS        → Metal  (via target-specific dep features)
#                  Linux/Windows → Vulkan (via target-specific dep features)
#                Manual override flags (pick at most one):
#                  --features llm-metal   (macOS Metal)
#                  --features llm-cuda    (NVIDIA CUDA)
#                  --features llm-vulkan  (cross-platform Vulkan)
#                Multimodal (image / audio inputs):
#                  --features llm-mtmd
#
#                neutts 0.0.7 uses llama-cpp-4 too — no `links = "llama"`
#                conflict; both features can be active simultaneously.
#
[features]
default    = ["tts-kitten", "tts-neutts", "llm", "mw75-rfcomm", "screenshots"]
screenshots = ["skill-screenshots/capture"]
mw75-rfcomm = ["skill-devices/mw75-rfcomm"]
tts-kitten = ["dep:kittentts", "dep:rodio", "skill-tts/tts-kitten"]
tts-neutts  = ["dep:neutts",    "dep:rodio", "dep:sha2", "dep:hound", "skill-tts/tts-neutts"]

# ── Frontend asset embedding ──────────────────────────────────────────────────
#
# `custom-protocol` tells Tauri to embed the SvelteKit build output
# (frontendDist) into the binary and serve it via the custom:// protocol
# at runtime.  Without this feature the binary starts in *dev mode* and
# tries to connect to devUrl (http://localhost:1420), which is not running
# in production.
#
# `npx tauri build` activates this feature automatically.  It must be
# passed explicitly when compiling with raw `cargo build --release`
# (as the release workflows do to sidestep Tauri CLI crashes):
#
#   cargo build --release --features custom-protocol
#
custom-protocol = ["tauri/custom-protocol"]

# ── LLM feature tree ──────────────────────────────────────────────────────────
#
# neutts 0.0.7 migrated its backbone from llama-cpp-2 to llama-cpp-4.
# Both neutts and llama-cpp-4 now resolve to the same package — Cargo
# deduplicates them, so the `links = "llama"` conflict is fully resolved.
#
# `llm`        — core: load GGUF model, run OpenAI-compatible HTTP server
# `llm-metal`  — Metal GPU offload (macOS)
# `llm-cuda`   — CUDA GPU offload (NVIDIA)
# `llm-vulkan` — Vulkan GPU offload (cross-platform)
# `llm-mtmd`   — multimodal: image/audio inputs via libmtmd
llm        = ["dep:llama-cpp-4", "axum/multipart", "llm-mtmd", "skill-llm/llm", "skill-settings/llm"]
llm-metal  = ["llm", "llama-cpp-4?/metal", "skill-llm/llm-metal"]
llm-cuda   = ["llm", "llama-cpp-4?/cuda", "skill-llm/llm-cuda"]
llm-vulkan = ["llm", "llama-cpp-4?/vulkan", "skill-llm/llm-vulkan"]
llm-mtmd   = ["llm", "llama-cpp-4?/mtmd", "skill-llm/llm-mtmd"]

[lib]
name = "skill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
dirs = "6"
regex = "1"
stacker = "0.1"

# rustls is pulled transitively by reqwest (tauri-plugin-updater), emotiv
# (tokio-tungstenite), hf-hub (fastembed) etc.  Because *both* the `ring`
# and `aws-lc-rs` crypto back-ends end up enabled via different dep paths,
# rustls cannot auto-detect a CryptoProvider at runtime.  We add it as a
# direct dep so we can call `ring::default_provider().install_default()`
# once at startup and avoid the panic.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Cross-platform GPU detection (VRAM, unified memory, backend).
# Used by gpu_stats.rs on Linux and Windows where IOKit is unavailable.
# llmfit-core covers NVIDIA (nvidia-smi + sysfs), AMD (rocm-smi + sysfs),
# Intel Arc (sysfs), Apple Silicon (system_profiler), and Windows WMI.
llmfit-core = "0.6.6"
# sysinfo is already compiled as an indirect dep via llmfit-core; listing it
# directly gives gpu_stats.rs access to System::refresh_memory() for the
# periodic free-RAM update on unified-memory Linux / Windows platforms.
sysinfo = "0.38"

# Cross-platform global keyboard / mouse event listener (input activity tracking).
# macOS: CGEventTap (requires Accessibility permission — degrades gracefully if absent).
tauri                        = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener          = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater         = "2"
tauri-plugin-process         = "2"
tauri-plugin-notification    = "2"
libc                         = "0.2"

# BLE adapter — same version as muse-rs (via skill-devices); already compiled, zero extra cost
btleplug = "0.11"

# Serial port enumeration (for Cyton board selection in settings)
serialport = "4"

# Async runtime (Tauri re-exports tokio but we need 'full' for select! etc.)
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# CSV writing
csv = "1"

# TTS — lightweight ONNX-based speech synthesis (English only for calibration)
# Model weights (~30 MB) are downloaded from HuggingFace Hub on first use.
#
# espeak feature: active on all platforms (macOS, Linux, Windows).
# On Windows, build-espeak-static.ps1 (PowerShell) builds libespeak-ng
# statically using CMake + MSVC, exactly as build-espeak-static.sh does on
# macOS/Linux.  See WINDOWS.md for setup instructions.
kittentts = { version = "0.2.7", features = ["espeak"], optional = true }

# NeuTTS voice-cloning TTS — GGUF backbone + NeuCodec decoder.
# 0.0.7+: backbone is now llama-cpp-4 (was llama-cpp-2).  This means neutts
#         and our `llm` feature share the same native llama library — Cargo
#         deduplicates them into one package, so the `links = "llama"` conflict
#         that existed with 0.0.4 is fully resolved.
# backbone: GGUF LLM via llama-cpp-4 (requires cmake + C++ at build time).
# espeak:   raw text → IPA → model (requires espeak-ng at runtime).
#           Active on all platforms — see kittentts note above.
# wgpu:     GPU-accelerated NeuCodec decoder via Burn/wgpu backend.
# fast:     polynomial-approximation RoPE caching (6-12× fewer cycles).
# metal:    macOS Metal GPU for the backbone (llama-cpp-4?/metal).
#           Without it the backbone runs on CPU, making inference 30–120 s per
#           sentence on Apple Silicon — effectively broken from a UX standpoint.
#           Declared here for non-macOS; the macOS entry is in
#           [target.'cfg(target_os = "macos")'.dependencies] below with `metal`.
neutts = { version = "0.0.7", features = ["backbone", "espeak", "fast", "wgpu"], optional = true }

# Audio playback — pulled in automatically via tts-kitten / tts-neutts features.
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-wav"], optional = true }

# SHA-256 for NeuTTS WAV cache keys — already compiled transitively via neutts.
sha2 = { version = "0.10", optional = true }

# WAV read-back for NeuTTS cache playback — already compiled transitively via neutts.
hound = { version = "3", optional = true }

# ONNX Runtime — same version as fastembed; provides ExecutionProvider
# types (CoreML, CPU) for GPU/CPU selection in image + text embeddings.
# default-features = false avoids pulling download-binaries twice.
ort = { version = "=2.0.0-rc.11", default-features = false }

# OCR engine — extract text from screenshots before downsizing.
# Models (~10 MB each) are auto-downloaded from S3 on first use.
ocrs = "0.12.1"
rten = "0.24.0"

# Apple Vision framework OCR — compiled ObjC FFI, runs on GPU/ANE.
# No-op on non-macOS platforms.  (Renamed from apple-ocr → skill-vision.)
skill-vision = { path = "../crates/skill-vision" }

# Image processing — resize/pad screenshots before saving and embedding.
# Already compiled transitively via fastembed; listing it here gives
# screenshot.rs direct access to DynamicImage, GenericImageView, etc.
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg"] }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.28"
skill-jobs  = { path = "../crates/skill-jobs" }
skill-settings = { path = "../crates/skill-settings" }
skill-llm   = { path = "../crates/skill-llm" }
skill-tools = { path = "../crates/skill-tools" }
skill-headless = { path = "../crates/skill-headless" }
skill-eeg  = { path = "../crates/skill-eeg", features = ["gpu"] }
skill-tts  = { path = "../crates/skill-tts" }
skill-data      = { path = "../crates/skill-data" }

# Arrow / Parquet — used for reading EEG session files during re-embed.
parquet     = { version = "54", default-features = false, features = ["arrow"] }
arrow-array = "54"
skill-commands  = { path = "../crates/skill-commands" }
skill-history   = { path = "../crates/skill-history" }
skill-router    = { path = "../crates/skill-router" }
skill-tray      = { path = "../crates/skill-tray" }
skill-exg       = { path = "../crates/skill-exg" }
skill-devices   = { path = "../crates/skill-devices" }
skill-autostart     = { path = "../crates/skill-autostart" }
skill-constants     = { path = "../crates/skill-constants" }
skill-label-index   = { path = "../crates/skill-label-index" }
skill-screenshots   = { path = "../crates/skill-screenshots", default-features = false }
skill-skills        = { path = "../crates/skill-skills", features = ["sync"] }
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }

# PNG encoding for the About-window icon data URL
png    = "0.17"
base64 = "0.22"

# Native confirmation dialogs (quit, etc.)
# xdg-portal is the Linux backend (D-Bus, no GTK3 headers needed); it is
# compiled away on macOS / Windows by rfd's own cfg gates, so listing it here
# is safe for all platforms.
rfd = { version = "0.17", default-features = false, features = ["file-handle-inner", "xdg-portal"] }

# GPU-accelerated FFT for real-time EEG filtering (overlap-save, wgpu backend)
gpu-fft = { version = "1.1.1", features = ["wgpu"] }

# WebSocket broadcast server + HTTP REST API
axum              = { version = "0.8", features = ["ws"] }
tower-http        = { version = "0.6", features = ["cors"] }
futures-util      = { version = "0.3", default-features = false, features = ["sink", "std"] }
# SSE streaming helpers used by the LLM server (zero cost when `llm` is off)
async-stream      = "0.3"

# ── LLM (OpenAI-compatible local inference via llama-cpp-4) ────────────────────
# Optional — enabled by the `llm` feature flag (see [features] above).
#
# neutts 0.0.7 migrated from llama-cpp-2 → llama-cpp-4 so there is no longer
# a `links = "llama"` conflict when both `tts-neutts` and `llm` are enabled.
# Cargo deduplicates both into a single llama-cpp-4 package.
llama-cpp-4 = { version = "0.2.12", optional = true }

# mDNS / Bonjour service discovery
mdns-sd = "0.18"

# ── EEG Embedding ─────────────────────────────────────────────────────────────

# ZUNA EEG foundation model — encoder-only, wgpu GPU backend.
# default-features = false drops the ndarray CPU backend; wgpu pulls
# burn-wgpu → cubecl-wgpu → wgpu 26.0.1, the same version gpu-fft uses.
zuna-rs   = { version = "0.0.2", default-features = false, features = ["wgpu"] }

# LUNA EEG foundation model — topology-agnostic encoder, wgpu GPU backend.
luna-rs   = { version = "0.0.3", default-features = false, features = ["wgpu"] }

# Pure-Rust HNSW approximate nearest-neighbour index with binary persistence.
fast-hnsw = { version = "1.0.1" }

# SQLite — bundled so no system lib required; stores daily embedding records.
rusqlite  = { version = "0.37", features = ["bundled"] }

# HuggingFace Hub client — used to auto-download ZUNA weights on first run.
# The sync API (default feature) is used; no async/tokio dependency required.
# 0.4+ fixes "relative URL without a base" when the CDN returns a relative
# Location header during the metadata redirect dance (hf-hub#issue/relative-url).
hf-hub    = "0.5"

# HTTP client used by the resumable LLM model downloader.
# ureq 2.12.1 is already compiled transitively (hf-hub 0.4, openbci), so
# adding it here costs zero extra compile time.
ureq      = { version = "2", features = ["native-tls"] }

# ndarray Array2<f32> is required by zuna_rs::load_from_named_tensor.
ndarray   = "0.17"

# GPU-accelerated parametric UMAP (burn + CubeCL / wgpu backend).
# Uses the fast-map repo's local checkout to avoid burn-optim 0.20.1 ABI mismatch
# on crates.io.  Repository: https://github.com/eugenehp/fast-map
fast-umap = { version = "1.2.3", default-features = false }

# Direct access to burn::backend::{Wgpu, wgpu::WgpuDevice} in eeg_embeddings.rs.
burn      = { version = "0.20.1", default-features = false, features = ["wgpu"] }
# Direct dep on wgpu for manual device init with validation flags control.
wgpu      = "26.0.1"
pollster  = "0.4"

# Raw CubeBackend + WgpuRuntime needed for fast-umap's AutodiffBackend bound
# (the Fusion<CubeBackend> wrapper from burn::backend::Wgpu is not supported).
burn-cubecl    = "0.20.1"
cubecl         = { version = "0.9.0", features = ["wgpu"] }
cubecl-runtime = "0.9.0"
crossbeam-channel = "0.5.15"

# ── Patch: Apple-Silicon Metal fix for cubek-matmul ───────────────────────────
#
# cubek-matmul 0.1.1 panics on Apple Silicon when the SimpleCyclicCmma tile
# (40 KB) exceeds Metal's 32 KB shared-memory limit.  The patched fork extends
# the 'auto' fallback chain:  SimpleCyclicCmma → SimpleUnit → Naive.
#
# ── fastembed: candle-Metal on macOS, ort-CPU everywhere else ─────────────────
#
# The `metal` feature activates candle-core/metal + candle-nn/metal so
# embeddings run on the Apple GPU via Metal Performance Shaders.
# On Linux / Windows the default ort backend is used instead.
[target.'cfg(target_os = "macos")'.dependencies]
fastembed = { version = "5.11.0", features = ["metal"] }
# ONNX Runtime with CoreML execution provider on macOS — runs image + text
# embeddings on GPU / Apple Neural Engine instead of CPU.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["coreml"] }
# llama-cpp-4 with Metal GPU offload — merged with the base [dependencies] entry
# so that when the `llm` feature is active the Metal backend is compiled in
# automatically on macOS.
llama-cpp-4 = { version = "0.2.12", optional = true, features = ["metal"] }
# Pure-Rust Focus Mode / Do Not Disturb control — no Swift, no ObjC, no
# private frameworks.  Replaces the hand-rolled Assertions.json writer.
macos-focus = "0.0.1"
# objc2 stack — pinned to the same versions rfd already pulls in so no extra
# compilation is needed.  Used to build the quit dialog with the app icon.
objc2            = "0.6.4"
objc2-app-kit    = { version = "0.3.2", features = ["NSAlert", "NSApplication", "NSButton", "NSImage", "NSRunningApplication"] }
objc2-foundation = "0.3.2"
dispatch2        = "0.3.1"
# NeuTTS backbone with Metal GPU — makes GGUF inference fast on Apple Silicon.
# `metal` passes llama-cpp-2/metal which enables the Metal compute backend.
# Without this the backbone falls back to CPU and a single utterance can take
# 30–120 s, making TTS appear broken.
neutts = { version = "0.0.7", features = ["backbone", "espeak", "fast", "wgpu", "metal"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
fastembed = { version = "5.11.0" }
# llama-cpp-4 with Vulkan GPU offload — merged with the base [dependencies]
# entry so that when the `llm` feature is active the Vulkan backend is compiled
# in automatically on Linux and Windows.
llama-cpp-4 = { version = "0.2.12", optional = true, features = ["vulkan"] }

[dev-dependencies]
tempfile = "3"

# ── [patch] and [profile] ──────────────────────────────────────────────────────
#
# These sections now live in the workspace root Cargo.toml (project root).
# Cargo requires [patch] and [profile] to be defined at the workspace level;
# they are ignored if placed in a member crate's Cargo.toml.

[lints]
workspace = true
