[package]
name = "skill"
version = "0.0.122"
description = "A Tauri App"
authors = ["NeuroSkill authors"]
edition = "2021"
license = "GPL-3.0-only"

# ── Feature flags ─────────────────────────────────────────────────────────────
#
#  tts-kitten  — enable KittenTTS (ONNX, English, ~30 MB, espeak-ng required)
#  tts-neutts  — enable NeuTTS   (GGUF backbone + NeuCodec, voice-cloning,
#                                  multi-language, espeak-ng + cmake required)
#
#
# LLM inference runs exclusively in skill-daemon.  The Tauri binary is a
# thin UI client that proxies LLM commands to the daemon over HTTP.
# Chat, downloads, and shortcut UI are always compiled (no feature gate).
#
[features]
default    = ["tts-kitten", "mw75-rfcomm", "gps"]
gps        = ["skill-data/gps"]
mw75-rfcomm = ["skill-devices/mw75-rfcomm"]
tts-kitten = ["dep:kittentts", "dep:rodio", "skill-tts/tts-kitten"]
tts-neutts  = ["dep:neutts",    "dep:rodio", "dep:sha2", "dep:hound", "skill-tts/tts-neutts"]

# ── Frontend asset embedding ──────────────────────────────────────────────────
#
# `custom-protocol` tells Tauri to embed the SvelteKit build output
# (frontendDist) into the binary and serve it via the custom:// protocol
# at runtime.  Without this feature the binary starts in *dev mode* and
# tries to connect to devUrl (http://localhost:1420), which is not running
# in production.
#
# `npx tauri build` activates this feature automatically.  It must be
# passed explicitly when compiling with raw `cargo build --release`
# (as the release workflows do to sidestep Tauri CLI crashes):
#
#   cargo build --release --features custom-protocol
#
custom-protocol = ["tauri/custom-protocol"]


[lib]
name = "skill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
dirs = "6"
log = "0.4"
regex = "1"
stacker = "0.1"
# Ensure zip is compiled with deflate support so tauri-plugin-updater can
# extract Deflate-compressed (method 8) entries from .nsis.zip update packages.
zip = { workspace = true }

# rustls is pulled transitively by reqwest (tauri-plugin-updater), emotiv
# (tokio-tungstenite), hf-hub (fastembed) etc.  Because *both* the `ring`
# and `aws-lc-rs` crypto back-ends end up enabled via different dep paths,
# rustls cannot auto-detect a CryptoProvider at runtime.  We add it as a
# direct dep so we can call `ring::default_provider().install_default()`
# once at startup and avoid the panic.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Cross-platform GPU detection (VRAM, unified memory, backend).
# Used by gpu_stats.rs on Linux and Windows where IOKit is unavailable.
llmfit-core = "0.9.7"
# sysinfo gives gpu_stats.rs access to System::refresh_memory() for the
# periodic free-RAM update on unified-memory Linux / Windows platforms.
sysinfo = "0.38"

# Cross-platform global keyboard / mouse event listener (input activity tracking).
# macOS: CGEventTap (requires Accessibility permission — degrades gracefully if absent).
tauri                        = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener          = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater         = "2"
tauri-plugin-process         = "2"
tauri-plugin-notification    = "2"
libc                         = "0.2"

# Serial port enumeration (for Cyton board selection in settings)
serialport = "4"

# Async runtime (Tauri re-exports tokio but we need 'full' for select! etc.)
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# CSV writing
csv = "1"

# TTS — lightweight ONNX-based speech synthesis (English only for calibration)
# Model weights (~30 MB) are downloaded from HuggingFace Hub on first use.
#
# espeak feature: active on all platforms (macOS, Linux, Windows).
# On Windows, build-espeak-static.ps1 (PowerShell) builds libespeak-ng
# statically using CMake + MSVC, exactly as build-espeak-static.sh does on
# macOS/Linux.  See WINDOWS.md for setup instructions.
kittentts = { version = "0.3.0", features = ["espeak"], optional = true }

# NeuTTS voice-cloning TTS — GGUF backbone + NeuCodec decoder.
# 0.1.0: backbone is llama-cpp-4.  This means neutts
#         and our `llm` feature share the same native llama library — Cargo
#         deduplicates them into one package, so the `links = "llama"` conflict
#         that existed with 0.0.4 is fully resolved.
# backbone: GGUF LLM via llama-cpp-4 (requires cmake + C++ at build time).
# espeak:   raw text → IPA → model (requires espeak-ng at runtime).
#           Active on all platforms — see kittentts note above.
# wgpu:     GPU-accelerated NeuCodec decoder via Burn/wgpu backend.
# fast:     polynomial-approximation RoPE caching (6-12× fewer cycles).
# metal:    macOS Metal GPU for the backbone (llama-cpp-4?/metal).
#           Without it the backbone runs on CPU, making inference 30–120 s per
#           sentence on Apple Silicon — effectively broken from a UX standpoint.
#           Declared here for non-macOS; the macOS entry is in
#           [target.'cfg(target_os = "macos")'.dependencies] below with `metal`.
neutts = { version = "0.1.1", features = ["backbone", "espeak", "fast", "wgpu"], optional = true }

# Audio playback — pulled in automatically via tts-kitten / tts-neutts features.
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-wav"], optional = true }

# SHA-256 for NeuTTS WAV cache keys — already compiled transitively via neutts.
sha2 = { version = "0.10", optional = true }

# WAV read-back for NeuTTS cache playback — already compiled transitively via neutts.
hound = { version = "3", optional = true }

# Apple Vision framework OCR — compiled ObjC FFI, runs on GPU/ANE.
# No-op on non-macOS platforms.  (Renamed from apple-ocr → skill-vision.)
skill-vision = { path = "../crates/skill-vision" }

# Image processing — resize/pad screenshots before saving and embedding.
# Already compiled transitively via fastembed; listing it here gives
# screenshot.rs direct access to DynamicImage, GenericImageView, etc.
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg"] }

anyhow     = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
skill-jobs  = { path = "../crates/skill-jobs" }
skill-settings = { path = "../crates/skill-settings", features = ["llm"] }
skill-llm   = { path = "../crates/skill-llm" }
skill-tools = { path = "../crates/skill-tools" }
skill-headless = { path = "../crates/skill-headless" }
skill-eeg  = { path = "../crates/skill-eeg" }
skill-tts  = { path = "../crates/skill-tts" }
skill-data      = { path = "../crates/skill-data" }
skill-oura      = { path = "../crates/skill-oura" }
oura-api        = "0.1.2"

skill-history   = { path = "../crates/skill-history" }
skill-tray      = { path = "../crates/skill-tray" }
# skill-exg removed — EXG embedding runs in skill-daemon only.
skill-devices   = { path = "../crates/skill-devices" }
skill-autostart     = { path = "../crates/skill-autostart" }
skill-calendar      = { path = "../crates/skill-calendar" }
skill-location      = { path = "../crates/skill-location" }
skill-constants     = { path = "../crates/skill-constants" }
skill-label-index   = { path = "../crates/skill-label-index" }
# skill-screenshots removed — screenshot capture/OCR/embedding runs in skill-daemon only.
skill-daemon-common = { path = "../crates/skill-daemon-common" }
skill-skills        = { path = "../crates/skill-skills", features = ["sync"] }
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }

# PNG encoding for the About-window icon data URL
png    = "0.18"
base64 = { workspace = true }

# Native confirmation dialogs (quit, etc.)
# xdg-portal is the Linux backend (D-Bus, no GTK3 headers needed); it is
# compiled away on macOS / Windows by rfd's own cfg gates, so listing it here
# is safe for all platforms.
rfd = { version = "0.17", default-features = false, features = ["file-handle-inner", "xdg-portal"] }


# HTTP client used by the resumable LLM model downloader.
ureq      = { version = "3", features = ["native-tls"] }

erased-serde = "0.4.10"

[target.'cfg(target_os = "macos")'.dependencies]
# Pure-Rust Focus Mode / Do Not Disturb control — no Swift, no ObjC, no
# private frameworks.  Replaces the hand-rolled Assertions.json writer.
macos-focus = "0.0.1"
# objc2 stack — pinned to the same versions rfd already pulls in so no extra
# compilation is needed.  Used to build the quit dialog with the app icon.
objc2            = "0.6.4"
objc2-app-kit    = { version = "0.3.2", features = ["NSAlert", "NSApplication", "NSButton", "NSImage", "NSRunningApplication"] }
objc2-foundation = "0.3.2"
dispatch2        = "0.3.1"
# NeuTTS backbone with Metal GPU — makes GGUF inference fast on Apple Silicon.
# `metal` passes llama-cpp-2/metal which enables the Metal compute backend.
# Without this the backbone falls back to CPU and a single utterance can take
# 30–120 s, making TTS appear broken.
neutts = { version = "0.1.1", features = ["backbone", "espeak", "fast", "wgpu", "metal"], optional = true }

[dev-dependencies]
tempfile = "3"

# ── [patch] and [profile] ──────────────────────────────────────────────────────
#
# These sections now live in the workspace root Cargo.toml (project root).
# Cargo requires [patch] and [profile] to be defined at the workspace level;
# they are ignored if placed in a member crate's Cargo.toml.

[lints]
workspace = true
