[package]
name = "skill-commands"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "EEG embedding search, timestamp helpers, SVG/DOT graph generation — extracted workspace crate"

[dependencies]
skill-constants = { path = "../skill-constants" }
skill-data      = { path = "../skill-data" }
fast-hnsw  = "1.0.1"
rusqlite = { workspace = true }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
