[package]
name = "skill-daemon-routes"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "HTTP routes and handlers for skill-daemon — extracted for parallel compilation"

[features]
default = ["llm"]
llm = ["skill-daemon-state/llm", "skill-llm/llm"]

[dependencies]
skill-daemon-state = { path = "../skill-daemon-state" }
skill-llm = { path = "../skill-llm" }

[lints]
workspace = true
