[package]
name = "skill-data"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Pure data/utility modules for NeuroSkill — extracted workspace crate"

[dependencies]
skill-constants = { path = "../skill-constants" }
skill-eeg       = { path = "../skill-eeg" }
skill-health    = { path = "../skill-health" }
skill-gpu       = { path = "../skill-gpu" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { workspace = true }
csv         = "1"
parquet     = { version = "54", default-features = false, features = ["arrow", "snap", "zstd"] }
arrow-array = "54"
arrow-schema = "54"
llmfit-core = "0.6.6"
sysinfo     = "0.38"
libc        = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
macos-focus = "0.0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
