[package]
name = "skill-devices"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Device-session pure logic — DND focus-mode decision engine, composite EEG score computation, battery EMA smoothing — extracted workspace crate"

[dependencies]
skill-constants = { path = "../skill-constants" }
skill-eeg       = { path = "../skill-eeg" }
skill-data      = { path = "../skill-data" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Muse EEG – library only, no TUI feature
muse-rs = { version = "0.1.0", default-features = false }

# OpenBCI board drivers (Ganglion BLE, Cyton serial, …)
openbci = { version = "0.0.1", features = ["ble"] }

# Neurable MW75 Neuro EEG headphones (BLE activation + RFCOMM streaming)
mw75 = { version = "0.0.2", default-features = false }
