[package]
name = "skill-eeg"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "EEG signal processing for NeuroSkill — extracted workspace crate"

[features]
default = []
gpu = ["gpu-fft"]

[dependencies]
skill-constants = { path = "../skill-constants" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
gpu-fft    = { version = "1.1.1", features = ["wgpu"], optional = true }
rustfft    = "6"

[lints]
workspace = true
