[package]
name = "skill-gpu"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Cross-platform GPU utilisation and memory stats (macOS IOKit, Linux/Windows via llmfit-core)"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
llmfit-core = "0.6.6"
sysinfo    = "0.38"
libc       = "0.2"
