[package]
name = "skill-headless"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Headless browser engine — CDP-like API over wry/tao for navigation, JS execution, screenshots, caching"

[dependencies]
# Windowing — hidden window hosts the webview; provides event loop + proxy.
tao = { version = "0.34", default-features = false }

# WebView — system webview with full JS, DOM, network stack.
wry = { version = "0.49" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
base64     = "0.22"

# Platform-specific tao features
[target.'cfg(target_os = "linux")'.dependencies]
tao = { version = "0.34", features = ["x11"] }
gtk = "0.18"
