[package]
name = "skill-headless"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Headless browser engine — CDP-like API over wry/tao for navigation, JS execution, screenshots, caching"

[dependencies]
# Windowing — hidden window hosts the webview; provides event loop + proxy.
tao = { version = "0.35", default-features = false, features = ["rwh_06"] }

# WebView — system webview with full JS, DOM, network stack.
wry = { version = "0.54" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
base64 = { workspace = true }
http       = "1"

[dev-dependencies]
serde_json = "1"
base64 = { workspace = true }

# Platform-specific tao features
[target.'cfg(target_os = "linux")'.dependencies]
tao = { version = "0.34", features = ["x11", "rwh_06"] }
gtk = "0.18"

[lints]
workspace = true
