[package]
name = "skill-health"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Apple HealthKit data store — sync, query, and summary over SQLite"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
