[package]
name = "skill-jobs"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Sequential job queue for expensive compute tasks — extracted workspace crate"

[dependencies]
skill-constants = { path = "../skill-constants" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
